--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
         "noImplicitReturns": true,
         "module": "es2015",
         "moduleResolution": "node",
-        "target": "es5"
+        "target": "es5",
+        "types": [
+            "jest"
+          ]
     },
     "include": [
         "./src/**/*"
