--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "stock-anaylsis",
   "version": "1.0.0",
-  "description": "stock anaylsis",
-  "main": "index.js",
+  "description": "stock anaylsis", 
   "scripts": {
+    
+    "dev": "webpack-dev-server  --open" ,
     "test": "jest --coverage"
   },
   "repository": {
@@ -25,15 +26,23 @@
   },
   "homepage": "https://github.com/benjamin0809/stock-analysis#readme",
   "dependencies": {
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/preset-typescript": "^7.13.0",
+    "axios": "^0.21.1",
     "babel-jest": "^26.6.3",
+    "html-webpack-plugin": "^5.3.1",
+    "postcss-loader": "^5.2.0",
+    "style-loader": "^2.0.0",
     "typescript": "^4.2.4",
     "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
+    "vue-property-decorator": "^9.1.2",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2",
     "webpack": "^5.31.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-typescript": "^7.13.0",
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.21.0",
@@ -49,7 +58,8 @@
     "ts-loader": "^8.1.0",
     "vue-loader": "^15.9.6",
     "vue-template-compiler": "^2.6.12",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "jest": {
     "testEnvironment": "node"
